Added indexStyles.css file for index.html. Added CTA image to file.

--- a/week 1/css/styles.css
+++ b/week 1/css/styles.css
@@ -1,9 +1,8 @@
 /*
 Micahel Eaton
-Project 4
-term 1302
+Miu week 1
+term 1303
 */
-
 
 body{
     background-color:#402831;
@@ -72,3 +71,4 @@ div ul> li ul{
 	border-bottom: 2px solid black;
 	margin-bottom:5px;
 }
+
