--- a/week 1/css/indexStyles.css
+++ b/week 1/css/indexStyles.css
@@ -5,7 +5,9 @@ term 1303
 */
 
 *{
-
+	margin: 0;
+	list-style-type: none;
+	background-color: #F6EACC;
 }
 a > img{
 	height: 175px;
@@ -15,10 +17,43 @@ a > img{
 
 #searchF{
 	width: 200px;
-	height: 25px;
+
 }
 
 #searchBut{
 	width: 85px;
-	height: 25px;
+	
 }
+
+h2{
+	
+	margin-top: 5px;
+    border: 1px solid black;
+    background-color: #7E6956;
+    padding:3px;
+    text-align: left;
+    width: 345px;
+    
+}    
+
+#advent, #action, #rpg{
+	
+    border: 1px solid black;
+    background-color: #ffffff;
+    text-align: left;
+    width:500px;
+	
+}
+
+#console, #enjoy, #beat, #rate{
+	margin-left: -40px;
+	margin-top: -5px;
+	height: auto;
+}
+
+#genre{
+	margin-left: -40px;
+	margin-top: 5px;
+	height: auto;
+}
+
