--- a/week 1/css/indexStyles.css
+++ b/week 1/css/indexStyles.css
@@ -17,7 +17,7 @@ a > img{
 
 #searchF{
 	width: 200px;
-
+	margin: 5px;
 }
 
 #searchBut{
@@ -31,28 +31,20 @@ h2{
     border: 1px solid black;
     background-color: #7E6956;
     padding:3px;
-    text-align: left;
+    text-align: center;
     width: 345px;
+    font-size: 36px;
     
 }    
 
-#advent, #action, #rpg{
-	
-    border: 1px solid black;
-    background-color: #ffffff;
-    text-align: left;
-    width:500px;
-	
-}
-
 #console, #enjoy, #beat, #rate{
-	margin-left: -40px;
+	margin-left: -38px;
 	margin-top: -5px;
 	height: auto;
 }
 
 #genre{
-	margin-left: -40px;
+	margin-left: -38px;
 	margin-top: 5px;
 	height: auto;
 }
